// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Size /> renders a child by applying height, width, maxHeight, maxWidth, minWidth, minHeight 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1cphyjf-0 lhSUkp Sizeweb__Size-sc-10bl685-0 lmgfZC"
  />
</div>
`;

exports[`<Size /> renders a child by applying height, width, maxHeight, maxWidth, minWidth, minHeight in numeric values 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1cphyjf-0 lhSUkp Sizeweb__Size-sc-10bl685-0 fHeyBj"
  />
</div>
`;

exports[`<Size /> renders a child component without any sizing properties being applied 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1cphyjf-0 lhSUkp Sizeweb__Size-sc-10bl685-0 dyblWC"
  />
</div>
`;
